Modified ingredient extraction to use rasa entities. Changed pipeline to use crf entity extraction. Added nlu data

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@
 /RecipeSesameFrontEnd/yarn-error.log*
 
 /RecipeSesameFrontEnd/public/images
+
+/conversational/models
+/conversational/.rasa/cache
