--- a/conversational/domain.yml
+++ b/conversational/domain.yml
@@ -35,7 +35,7 @@ responses:
 
   utter_ingredient_pos:
   - text: "{ingredient} will be included."
-  
+
   utter_ingredient_neg:
   - text: "Recipes with {ingredient} have been filtered out."
 
@@ -53,6 +53,10 @@ actions:
   - action_ingredient_neg
   - action_adjective_pos
   - action_adjective_neg
+
+entities:
+  - ingredient
+  - adjective
 
 session_config:
   session_expiration_time: 60
