--- a/conversational/config.yml
+++ b/conversational/config.yml
@@ -26,7 +26,7 @@ pipeline:
      constrain_similarities: true
    - name: CRFEntityExtractor
      "features": [
-     ["pos"]
+     ["pos", "pattern"]
      ]
    - name: EntitySynonymMapper
    - name: ResponseSelector
