--- a/conversational/domain.yml
+++ b/conversational/domain.yml
@@ -12,6 +12,8 @@ intents:
   - ingredient_neg
   - adjective_pos
   - adjective_neg
+  - tool_pos
+  - tool_neg
   - clear
 
 responses:
@@ -50,6 +52,12 @@ responses:
   utter_adjective_neg:
   - text: "{adjective} recipes have been filtered out"
 
+  utter_tool_pos:
+  - text: "Searching for recipes made with a {tool}"
+
+  utter_tool_neg:
+  - text: "Excluding recipes that require a {tool}"
+
   utter_anything_else:
   - text: "Anything else?"
   - text: "Any other ingredients you'd like?"
@@ -62,11 +70,15 @@ actions:
   - action_ingredient_neg
   - action_adjective_pos
   - action_adjective_neg
+  - action_tool_pos
+  - action_tool_neg
   - action_clear
+
 
 entities:
   - ingredient
   - adjective
+  - tool
 
 session_config:
   session_expiration_time: 60
