Better at identifying nonsense.

--- a/conversational/data/nlu.yml
+++ b/conversational/data/nlu.yml
@@ -319,3 +319,12 @@ nlu:
     - qt
     - dgd
     - njsd
+    - ^&#&*$%&#^&##
+    - ::::
+    - ":<":<":<":<:"<":<
+    - ()()((u989427634gbjsehf ))
+    - 248t7274
+    - 92h3r ":< 472 ":<:"<"
+    - hhh mmmmmmm llllllll pppppppppp qqqqqqqqqqq
+    - faubi nmsdm maman kjbafjb
+    - an an an an an
